--- a/sass/contacts.scss
+++ b/sass/contacts.scss
@@ -25,7 +25,8 @@
   color: $gray-dark;
   border-bottom: 1px solid #46c1ae;
 
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     color: #46c1ae;
   }
 
