--- a/sass/page-header.scss
+++ b/sass/page-header.scss
@@ -42,7 +42,8 @@
   color: rgba(0, 0, 0, 1);
   text-decoration: none;
 
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     color: rgba(0, 0, 0, 0.6);
   }
 
