--- a/sass/btn.scss
+++ b/sass/btn.scss
@@ -1,7 +1,7 @@
 .btn {
   display: block;
   max-width: 260px;
-  padding: 20px;
+  padding: 14px;
   font-weight: 700;
   font-size: 17px;
   line-height: 20px;
@@ -20,5 +20,16 @@
 
   &:active {
     color: grba(255, 255, 255, 0.3);
+  }
+}
+
+.btn--green {
+  color: rgba(255, 255, 255, 1);
+  background-color: $green-light;
+  border-color: $green-light;
+
+  &:hover {
+    background-color: rgba(255, 255, 255, 1);
+    color: $green-light;
   }
 }
