--- a/sass/form.scss
+++ b/sass/form.scss
@@ -17,6 +17,24 @@
   margin: 0;
   padding: 0;
   border: none;
+  border-top: 1px solid $green-light;
+}
+
+.field-phone {
+  position: relative;
+  padding-top: 25px;
+  padding-bottom: 40px;
+}
+
+.field-message {
+  position: relative;
+  padding-top: 32px;
+}
+
+.field-mail {
+  position: relative;
+  padding-top: 26px;
+  padding-bottom: 39px;
 }
 
 .field-radio__title,
@@ -25,12 +43,21 @@
 .field-phone__title,
 .field-mail__title,
 .field-message__title {
+  padding-right: 25px;
   font-family: "Open Sans", "Arial", sans-serif;
   font-weight: 700;
   font-size: 17px;
   line-height: 17px;
   color: $green-light;
   text-transform: uppercase;
+}
+
+.field-phone__title,
+.field-mail__title {
+  position: absolute;
+  top: -10px;
+  left: 0;
+  background-color: #ffffff;
 }
 
 .field-radio__wrapper,
@@ -43,9 +70,56 @@
   color: rgba(0, 0, 0, 1);
 }
 
+.field-username__item {
+  margin: 0;
+  margin-bottom: 23px;
+}
+
+.field-username__label {
+  display: block;
+  margin-bottom: 15px;
+}
+
+.field-username__input,
+.field-phone__input,
+.field-mail__input {
+  width: 100%;
+  padding-bottom: 15px;
+  border: none;
+  border-bottom: 2px solid #000000;
+
+  &::placeholder {
+    font-size: 17px;
+    line-height: 18px;
+    color: rgba(68, 68, 68, 0.3);
+  }
+}
+
+.field-message__title {
+  position: absolute;
+  top: -9px;
+  left: 0;
+  padding-right: 23px;
+  background-color: #ffffff;
+}
+
+.field-message__textarea {
+  width: 100%;
+  min-height: 142px;
+  padding: 15px;
+  border: 2px solid $gray-dark;
+  resize: none;
+
+  &::placeholder {
+    font-size: 17px;
+    line-height: 18px;
+    color: rgba(68, 68, 68, 0.3);
+  }
+}
+
 .form__required-message {
   display: block;
-  margin-top: 18px;
+  margin-top: 7px;
   margin-bottom: 31px;
   font-size: 14px;
   line-height: 16px;
