Добавлены адаптивные сетки для главной страницы

--- a/sass/add-to-cart.scss
+++ b/sass/add-to-cart.scss
@@ -1,29 +1,44 @@
 .add-to-cart {
-  min-height: 337px;
-  padding-top: 38px;
+  width: 320px;
+  margin: 0 auto;
+  padding-top: 30px;
   padding-bottom: 46px;
   border-top: 1px solid #c6c6c6;
   box-shadow: 0 5px 10px 0 rgba(0, 1, 1, 0.25);
 }
 
-.add-to-cart__title {
-  @include title;
-  margin-bottom: 25px;
-  text-transform: uppercase;
+.add-to-cart__container {
+  display: flex;
+  flex-direction: column;
+  padding: 0 30px;
 }
 
-.add-to-cart__form-title {
-  margin-bottom: 28px;
+.add-to-cart__title {
+  @include title;
+  margin-bottom: 12px;
+  padding-left: 4px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.add-to-cart__descr {
+  margin-bottom: 24px;
+  text-align: center;
 }
 
 .add-to-cart__field-wrapper {
-  margin-bottom: 31px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 23px;
 }
 
 .add-to-cart__radio-wrapper {
   width: 82px;
   height: 52px;
   margin-right: 7px;
+  margin-bottom: 7px;
+  padding-top: 9px;
+  text-align: center;
   border: 2px solid rgba(68, 68, 68, 0.1);
   cursor: pointer;
 
@@ -49,8 +64,43 @@
   font-weight: 700;
   font-size: 17px;
   line-height: 17px;
+  text-transform: uppercase;
 }
 
 .add-to-cart__btn {
-  width: 260px;
+  width: 100%;
+}
+
+@media (min-width: $tablet-width) {
+  .add-to-cart {
+    width: 568px;
+    padding-top: 33px;
+    border: 1px solid #c6c6c6;
+  }
+
+  .add-to-cart__container {
+    padding-left: 108px;
+    padding-right: 104px;
+  }
+
+  .add-to-cart__title {
+    padding-left: 0;
+    margin-bottom: 14px;
+    font-size: 30px;
+    line-height: 57px;
+  }
+
+  .add-to-cart__descr {
+    margin-bottom: 21px;
+    font-size: 17px;
+    line-height: 30px;
+  }
+
+  .add-to-cart__field-wrapper {
+    margin-bottom: 24px;
+  }
+
+  .add-to-cart__radio-wrapper {
+    width: 112px;
+  }
 }
