--- a/sass/promo.scss
+++ b/sass/promo.scss
@@ -1,20 +1,22 @@
 .promo {
   min-height: 488px;
-  padding-top: 75px;
+  padding-top: 70px;
   background-color: #fafafa;
   background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: center top;
+  background-position: center -18px;
 }
 
 .promo__container {
+  display: flex;
+  flex-direction: column;
   width: 320px;
   margin: 0 auto;
 }
 
 .promo__title {
   @include title;
-  margin-bottom: 120px;
+  margin-bottom: 122px;
   padding: 0 30px;
   font-size: 27px;
   text-align: center;
@@ -22,12 +24,16 @@
 
 .promo__list {
   @include list-reset;
+  display: flex;
+  flex-direction: column;
 }
 
 .promo__link {
   display: block;
-  padding: 30px;
+  padding-top: 25px;
   padding-right: 110px;
+  padding-bottom: 30px;
+  padding-left: 28px;
   font-weight: bold;
   font-size: 19px;
   line-height: 24px;
@@ -39,5 +45,58 @@
 
   &--toys {
     background-color: $green-dark;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .promo {
+    padding-top: 153px;
+    background-image: url("../img/hero-tablet.jpg");
+    background-position: center 0;
+  }
+
+  .promo__container {
+    width: 768px;
+    padding: 0 50px;
+  }
+
+  .promo__title {
+    margin-bottom: 373px;
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  .promo__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .promo__item {
+    width: 50%;
+  }
+
+  .promo__link {
+    padding-top: 27px;
+    padding-left: 36px;
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .promo {
+    padding-top: 154px;
+    background-image: url("../img/hero-desktop.jpg");
+  }
+
+  .promo__container {
+    width: 1150px;
+  }
+
+  .promo__title {
+    padding: 0 160px;
+    margin-bottom: 359px;
+    font-size: 53px;
+    line-height: 57px;
   }
 }
