--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,11 +5,16 @@
 @import "global";
 @import "btn";
 @import "page-header";
+@import "main-nav";
+@import "site-list";
+@import "user-list";
 @import "page-main";
 @import "promo";
+@import "product-week";
 @import "product";
 @import "advantages";
 @import "reviews";
+@import "slider";
 @import "contacts";
 @import "catalog";
 @import "product-card";
