--- a/sass/advantages.scss
+++ b/sass/advantages.scss
@@ -1,5 +1,13 @@
 .advantages {
-  padding-top: 34px;
+  padding-top: 27px;
+}
+
+.advantages__container {
+  display: flex;
+  flex-direction: column;
+  width: 320px;
+  padding: 0 30px;
+  margin: 0 auto;
 }
 
 .advantages__title {
@@ -8,15 +16,107 @@
 }
 
 .advantages__list {
+  display: flex;
+  flex-direction: column;
+
   @include list-reset;
   margin-bottom: 30px;
 }
 
 .advantages__item {
-  padding-top: 86px;
+  position: relative;
+  padding-top: 57px;
+  margin-bottom: 26px;
   font-family: "Open Sans", "Arial", sans-serif;
   font-weight: 700;
   font-size: 17px;
   line-height: 20px;
   color: rgba(0, 0, 0, 1);
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.advantages__icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 35px;
+  height: 40px;
+  background-color: $green-light;
+}
+
+@media (min-width: $tablet-width) {
+  .advantages {
+    padding-top: 47px;
+  }
+
+  .advantages__container {
+    width: 768px;
+    padding: 0 50px;
+  }
+
+  .advantages__title {
+    margin-left: -4px;
+    margin-bottom: 46px;
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  .advantages__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .advantages__item {
+    width: 50%;
+    margin-bottom: 54px;
+    font-size: 20px;
+    line-height: 22px;
+
+    &--eco {
+      order: 1;
+    }
+
+    &--handmade {
+      order: 2;
+    }
+
+    &--price {
+      order: 3;
+    }
+
+    &--support {
+      order: 4;
+    }
+
+    &--likes {
+      order: 5;
+    }
+
+    &--giftwrap {
+      order: 6;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .advantages {
+    padding-top: 58px;
+  }
+
+  .advantages__container {
+    width: 1150px;
+    padding: 0 226px;
+  }
+
+  .advantages__title {
+    font-size: 53px;
+    line-height: 57px;
+  }
+
+  .advantages__list {
+    margin-bottom: 35px;
+  }
 }
