--- a/sass/contacts.scss
+++ b/sass/contacts.scss
@@ -1,27 +1,57 @@
 .contacts {
-  padding-top: 44px;
+  padding-top: 35px;
   padding-bottom: 39px;
 }
 
+.contacts__container {
+  width: 320px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.contacts__descr {
+  display: flex;
+  flex-direction: column;
+  padding-left: 29px;
+  padding-right: 30px;
+}
+
 .contacts__title {
-  @include title;
+  margin: 0;
+  margin-bottom: 26px;
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 30px;
+  color: rgba(0, 0, 0, 1);
 }
 
-.contacts__table {
-  margin-bottom: 43px;
+.contacts__info {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 37px;
 }
 
-.contacts__table-parameter,
-.contacts__table-value {
-  padding-top: 40px;
-  vertical-align: top;
+.contacts__info-row {
+  display: flex;
+  flex-flow: row wrap;
+
+  &:first-child {
+    margin-bottom: 30px;
+  }
 }
 
-.contacts__table-parameter {
+.contacts__info-parameter {
   width: 77px;
 }
 
+.contacts__info-value {
+  width: 184px;
+}
+
 .contacts__email {
+  padding-bottom: 3px;
   color: $gray-dark;
   border-bottom: 1px solid #46c1ae;
 
@@ -36,12 +66,114 @@
 }
 
 .contacts__map {
+  width: 100%;
+  height: 457px;
+  margin-bottom: 39px;
+  background-color: #ececec;
+}
+
+.map__img {
   width: 320px;
   height: 457px;
-  margin: 0 auto;
-  margin-bottom: 39px;
 }
 
 .contacts__btn {
-  margin: 0 auto;
+  margin: 0 30px;
+  letter-spacing: 1px;
+}
+
+@media (min-width: $tablet-width) {
+  .contacts {
+    padding-top: 60px;
+    padding-bottom: 57px;
+  }
+
+  .contacts__container {
+    width: 768px;
+  }
+
+  .contacts__descr {
+    padding: 0 50px;
+  }
+
+  .contacts__title {
+    margin-left: -3px;
+    margin-bottom: 49px;
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  .contacts__info {
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
+    margin-bottom: 56px;
+    font-size: 17px;
+    line-height: 30px;
+  }
+
+  .contacts__info-row {
+    width: 50%;
+  }
+
+  .contacts__info-value {
+    width: 221px;
+  }
+
+  .contacts__map {
+    margin-bottom: 55px;
+  }
+
+  .contacts__btn {
+    align-self: center;
+    min-width: 230px;
+    letter-spacing: 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .contacts {
+    padding-top: 70px;
+    padding-bottom: 105px;
+  }
+
+  .contacts__container {
+    position: relative;
+    flex-flow: row wrap;
+    width: 1150px;
+    padding: 0 50px;
+  }
+
+  .contacts__descr {
+    width: 525px;
+    padding-left: 174px;
+    padding-top: 71px;
+    padding-bottom: 55px;
+  }
+
+  .contacts__title {
+    margin-bottom: 48px;
+    font-size: 53px;
+    line-height: 57px;
+  }
+
+  .contacts__info {
+    flex-direction: column;
+  }
+
+  .contacts__info-row {
+    width: 100%;
+  }
+
+  .contacts__map {
+    width: 525px;
+    height: 457px;
+    margin-bottom: 0;
+  }
+
+  .contacts__btn {
+    position: absolute;
+    left: 195px;
+    bottom: 0;
+  }
 }
