--- a/sass/page-footer.scss
+++ b/sass/page-footer.scss
@@ -1,33 +1,119 @@
 .page-footer {
+  min-height: 160px;
+  padding-top: 25px;
   background-color: $gray-light;
 }
 
+.page-footer__container {
+  display: flex;
+  flex-direction: column;
+  width: 320px;
+  padding: 0 30px;
+  margin: 0 auto;
+}
+
+.page-footer__logo {
+  display: none;
+}
+
 .page-footer__social {
-  min-height: 80px;
+  border-bottom: 1px solid $gray-medium;
 }
 
 .social__list {
   @include list-reset;
+  display: flex;
+  flex-flow: row wrap;
+  margin-left: 53px;
+  margin-right: 62px;
+  margin-bottom: 29px;
+}
+
+.social__item {
+  margin-right: 30px;
+
+  &:nth-child(3n) {
+    margin-right: 0;
+  }
 }
 
 .social__link {
   display: block;
 }
 
-.page-footer__copyright {
+.social__link-icon {
   display: block;
-  min-height: 80px;
-  padding-top: 23px;
-  padding-right: 57px;
+  width: 28px;
+  height: 26px;
+  background-color: $green-light;
+}
+
+.page-footer__copyright {
+  position: relative;
+  display: block;
+  margin-right: 40px;
+  margin-left: 37px;
+  padding-top: 27px;
   padding-bottom: 23px;
   font-family: "Open Sans", "Arial", sans-serif;
   font-weight: 700;
   font-size: 19px;
   line-height: 19px;
   color: rgba(0, 0, 0, 1);
-  border-top: 1px solid $gray-medium;
 
   &:active {
     opacity: 0.3;
+  }
+}
+
+.page-footer__copyright-icon {
+  position: absolute;
+  right: 0;
+  top: 22px;
+  display: block;
+  width: 29px;
+  height: 34px;
+  background-color: $green-light;
+}
+
+@media (min-width: $tablet-width) {
+  .page-footer {
+    padding-top: 50px;
+  }
+
+  .page-footer__container {
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 768px;
+    padding: 0 50px;
+  }
+
+  .page-footer__logo {
+    display: block;
+  }
+
+  .page-footer__social {
+    border: none;
+  }
+
+  .social__list {
+    margin: 0;
+  }
+
+  .page-footer__copyright {
+    margin: 0;
+    padding: 0;
+    padding-right: 55px;
+  }
+
+  .page-footer__copyright-icon {
+    top: -5px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-footer__container {
+    width: 1150px;
   }
 }
