--- a/sass/page-main.scss
+++ b/sass/page-main.scss
@@ -21,3 +21,9 @@
   font-size: 13px;
   line-height: 24px;
 }
+
+@media (min-width: $tablet-width) {
+  .page-main {
+    margin-top: -58px;
+  }
+}
