--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -3,3 +3,5 @@ $gray-dark: #444444;
 $gray-medium: #ececec;
 $green-light: #63d1bb;
 $green-dark: #56c3b2;
+$tablet-width: 768px;
+$desktop-width: 1200px;
