--- a/sass/page-main.scss
+++ b/sass/page-main.scss
@@ -1,8 +1,8 @@
 .page-main__wrapper {
-  padding-top: 75px;
+  padding-top: 70px;
   padding-right: 30px;
   padding-left: 30px;
-  padding-bottom: 74px;
+  padding-bottom: 76px;
   background-color: #f1f1f1;
 }
 
@@ -25,5 +25,27 @@
 @media (min-width: $tablet-width) {
   .page-main {
     margin-top: -58px;
+  }
+
+  .page-main__wrapper {
+    padding-top: 95px;
+    padding-bottom: 79px;
+  }
+
+  .page-main__title {
+    font-size: 43px;
+    line-height: 50px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-main__wrapper {
+    padding-top: 93px;
+    padding-bottom: 102px;
+  }
+
+  .page-main__title {
+    font-size: 53px;
+    line-height: 57px;
   }
 }
