--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,5 +20,11 @@
 @import "product-card";
 @import "production";
 @import "form";
+@import "field-radio";
+@import "field-checkbox";
+@import "field-username";
+@import "field-phone";
+@import "field-mail";
+@import "field-message";
 @import "page-footer";
 @import "add-to-cart";
