--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -9,7 +9,7 @@
 @font-face {
   font-family: "Open Sans";
   src: url("../fonts/opensansbold.woff2") format("woff2"),
-    url("../fonts/opensansbold.woff2") format("woff");
+    url("../fonts/opensansbold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
