--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -24,3 +24,12 @@
   padding: 0;
   list-style: none;
 }
+
+@mixin field-title {
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 17px;
+  color: $green-light;
+  text-transform: uppercase;
+}
