--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -11,12 +11,11 @@
   color: rgba(0, 0, 0, 1);
 }
 
-@mixin font-link {
+@mixin link {
   font-family: "Open Sans", "Arial", sans-serif;
   font-weight: 700;
-  font-size: 17px;
-  line-height: 24px;
   color: rgba(0, 0, 0, 1);
+  text-decoration: none;
 }
 
 @mixin list-reset {
