--- a/sass/product-card.scss
+++ b/sass/product-card.scss
@@ -22,8 +22,11 @@
   display: block;
   margin-top: 27px;
   margin-bottom: 3px;
-
-  @include font-link;
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 24px;
+  color: rgba(0, 0, 0, 1);
 
   &:hover,
   &:focus {
