--- a/sass/reviews.scss
+++ b/sass/reviews.scss
@@ -43,8 +43,12 @@
 }
 
 .reviews__author-name {
-  @include font-link;
   margin-bottom: 3px;
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 24px;
+  color: rgba(0, 0, 0, 1);
   letter-spacing: 0.01em;
 }
 
