--- a/sass/user-list.scss
+++ b/sass/user-list.scss
@@ -1,16 +1,20 @@
 .user-list {
   display: flex;
   flex-direction: column;
+
+  @include list-reset;
 }
 
-.user-list__item {
+.user-list__search,
+.user-list__cart {
   padding-left: 30px;
   padding-right: 30px;
 
   @include divider;
 }
 
-.user-list__link {
+.user-list__search-link,
+.user-list__cart-link {
   position: relative;
   display: block;
   padding-top: 26px;
@@ -19,9 +23,8 @@
   padding-left: 46px;
   font-size: 17px;
   line-height: 24px;
-  font-weight: 800;
-  color: rgba(0, 0, 0, 1);
-  text-decoration: none;
+
+  @include link;
 
   &:hover,
   &:focus {
@@ -33,7 +36,7 @@
   }
 }
 
-.user-list__link-search .user-list__link-icon {
+.user-list__search-icon {
   position: absolute;
   top: 30px;
   left: 0;
@@ -43,7 +46,7 @@
   background-color: #ececec;
 }
 
-.user-list__link-cart .user-list__link-icon {
+.user-list__cart-icon {
   position: absolute;
   left: 0;
   top: 29px;
@@ -60,24 +63,29 @@
     order: 2;
   }
 
-  .user-list__item {
+  .user-list__search {
     padding: 0;
-    border: none;
+    border-left: 1px solid $gray-medium;
+    border-top: none;
   }
 
-  .user-list__link-search {
-    width: 84px;
+  .user-list__cart {
+    padding: 0;
+    border-left: 1px solid $gray-medium;
+    border-top: none;
+  }
+
+  .user-list__search-link {
+    width: 82px;
     min-height: 89px;
     padding-top: 36px;
     padding-left: 34px;
     padding-right: 0;
     padding-bottom: 29px;
     font-size: 0;
-    border-right: 1px solid $gray-medium;
-    border-left: 1px solid $gray-medium;
   }
 
-  .user-list__link-cart {
+  .user-list__cart-link {
     width: 264px;
     padding-top: 31px;
     padding-right: 0;
@@ -85,12 +93,12 @@
     padding-left: 82px;
   }
 
-  .user-list__link-search .user-list__link-icon {
+  .user-list__search-icon {
     top: 35px;
     left: 34px;
   }
 
-  .user-list__link-cart .user-list__link-icon {
+  .user-list__cart-icon {
     top: 34px;
     left: 31px;
   }
@@ -98,6 +106,6 @@
 
 @media (min-width: $desktop-width) {
   .user-list {
-    width: 350px;
+    width: 351px;
   }
 }
