--- a/sass/production.scss
+++ b/sass/production.scss
@@ -12,36 +12,62 @@
 .production__wrapper {
   display: flex;
   flex-direction: column;
-  border: 1px solid $gray-medium;
 }
 
 .production__title {
-  margin-top: 24px;
-  margin-right: 34px;
-  margin-left: 34px;
-  margin-bottom: 23px;
-  padding-left: 56px;
+  margin: 0;
+  padding-top: 24px;
+  padding-right: 34px;
+  padding-left: 89px;
+  padding-bottom: 23px;
   font-family: "Open Sans", "Arial", sans-serif;
   font-weight: 700;
   font-size: 17px;
   line-height: 24px;
   color: rgba(0, 0, 0, 1);
+  border: 1px solid $gray-medium;
 }
 
 .production__video {
   position: relative;
   width: 260px;
   height: 150px;
-  margin-bottom: 27px;
+  overflow: hidden;
 }
 
-.video__controls {
+.video__toggle {
   position: absolute;
-  z-index: 5;
+  top: 50%;
+  left: 50%;
+  width: 102px;
+  height: 78px;
+  margin-top: -40px;
+  margin-left: -51px;
+  background-color: transparent;
+  background-image: url("../img/icon-play.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
+  border: none;
+  cursor: pointer;
+  transition: transform .2s;
+
+  &:hover,
+  &:focus {
+    transform: scale(1.2);
+  }
+
+  &:active {
+    transform: scale(0.8);
+    opacity: 0.3;
+  }
 }
 
 .production__descr-wrapper {
-  padding: 0 34px;
+  padding-top: 25px;
+  padding-left: 33px;
+  padding-right: 33px;
+  border: 1px solid $gray-medium;
 }
 
 .production__descr {
@@ -75,14 +101,18 @@
   }
 
   .production__title {
-    margin-top: 38px;
-    margin-bottom: 31px;
-    padding-left: 73px;
+    padding-top: 37px;
+    padding-bottom: 31px;
+    padding-left: 105px;
     font-size: 20px;
+    border-bottom: none;
   }
 
   .production__descr-wrapper {
-    padding: 0 41px;
+    padding-left: 39px;
+    padding-right: 39px;
+    padding-top: 0;
+    border-top: none;
   }
 
   .production__descr {
@@ -92,7 +122,7 @@
   }
 
   .production__order-btn {
-    margin-left: 1px;
+    margin-left: 2px;
     margin-bottom: 45px;
   }
 }
@@ -115,11 +145,12 @@
 
   .production__title {
     position: absolute;
-    right: 87px;
+    right: 88px;
     width: 200px;
     margin: 0;
     padding-left: 0;
     padding-top: 95px;
+    border: none;
   }
 
   .production__video {
@@ -129,8 +160,9 @@
   .production__descr-wrapper {
     width: 367px;
     padding-top: 176px;
-    padding-left: 80px;
-    padding-right: 56px;
+    padding-left: 79px;
+    padding-right: 55px;
+    border-top: 1px solid $gray-medium;
   }
 
   .production__descr {
@@ -139,7 +171,7 @@
   }
 
   .production__order-btn {
-    margin-left: 0;
+    margin-left: 1px;
     margin-right: 0;
   }
 }
