Исправления для stylelint

--- a/sass/production.scss
+++ b/sass/production.scss
@@ -50,7 +50,7 @@
   background-size: contain;
   border: none;
   cursor: pointer;
-  transition: transform .2s;
+  transition: transform 0.2s;
 
   &:hover,
   &:focus {
