--- a/sass/field-message.scss
+++ b/sass/field-message.scss
@@ -13,6 +13,7 @@
   left: 0;
   padding-right: 23px;
   background-color: #ffffff;
+  cursor: pointer;
 
   @include field-title;
 }
@@ -21,14 +22,22 @@
   width: 100%;
   min-height: 142px;
   padding: 15px;
+  font-size: 17px;
+  line-height: 18px;
+  letter-spacing: 0.03em;
   border: 2px solid $gray-dark;
   resize: none;
 
   &::placeholder {
-    font-size: 17px;
-    line-height: 18px;
+
     color: rgba(68, 68, 68, 0.3);
   }
+}
+
+.field-message__textarea:hover,
+.field-message__textarea:focus,
+.field-message__textarea:active {
+  border-color: #62d1ba;
 }
 
 @media (min-width: $tablet-width) {
@@ -36,7 +45,7 @@
     width: 768px;
     padding-top: 50px;
     padding-left: 168px;
-    margin-bottom: 45px;
+    margin-bottom: 44px;
     border: none;
   }
 
@@ -46,30 +55,26 @@
   }
 
   .field-message__textarea {
-    &::placeholder {
-      font-size: 19px;
-      line-height: 19px;
-    }
+    padding: 13px 15px;
+    font-size: 19px;
+    line-height: 19px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .field-message {
     width: 942px;
-    margin-bottom: 39px;
+    margin-bottom: 40px;
     padding-left: 0;
   }
 
   .field-message__title {
-    top: 66px;
-    left: -113px;
+    top: 67px;
+    left: -112px;
   }
 
   .field-message__textarea {
-    padding: 12px;
-
-    &::placeholder {
-      letter-spacing: 0.04em;
-    }
+    padding: 13px 16px;
+    letter-spacing: 0.03em;
   }
 }
