--- a/sass/advantages.scss
+++ b/sass/advantages.scss
@@ -36,15 +36,78 @@
   &:last-child {
     margin-bottom: 0;
   }
+
+  &::before {
+    content: "";
+    position: absolute;
+    background-repeat: no-repeat;
+  }
 }
 
-.advantages__icon {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 35px;
-  height: 40px;
-  background-color: $green-light;
+.advantages__item--eco {
+  &::before {
+    top: 0;
+    left: 8px;
+    width: 32px;
+    height: 38px;
+    background-image: url("../img/icon/icon-feature-flower.svg");
+    background-position: center center;
+  }
+}
+
+.advantages__item--price {
+  &::before {
+    top: 2px;
+    left: 0;
+    width: 47px;
+    height: 28px;
+    background-image: url("../img/icon/icon-feature-money.svg");
+    background-position: center center;
+  }
+}
+
+.advantages__item--likes {
+  &::before {
+    top: 7px;
+    left: 7px;
+    width: 34px;
+    height: 28px;
+    background-image: url("../img/icon/icon-feature-heart.svg");
+    background-position: center center;
+  }
+}
+
+.advantages__item--handmade {
+  &::before {
+    top: 4px;
+    left: 2px;
+    width: 35px;
+    height: 35px;
+    background-image: url("../img/icon/icon-feature-ball.svg");
+    background-position: center center;
+  }
+}
+
+.advantages__item--support {
+  &::before {
+    top: 5px;
+    left: -7px;
+    width: 55px;
+    height: 24px;
+    background-image: url("../img/icon/icon-feature-rocket.svg");
+    background-position: center center;
+  }
+}
+
+.advantages__item--giftwrap {
+  &::before {
+    top: 3px;
+    left: 3px;
+    width: 33px;
+    height: 33px;
+    background-image: url("../img/icon/icon-feature-gift.svg");
+    background-position: center center;
+  }
 }
 
 @media (min-width: $tablet-width) {
