--- a/sass/contacts.scss
+++ b/sass/contacts.scss
@@ -97,10 +97,23 @@
   }
 
   .contacts__title {
+    position: relative;
     margin-left: -3px;
     margin-bottom: 49px;
     font-size: 43px;
     line-height: 50px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: -16px;
+      right: 2px;
+      width: 47px;
+      height: 82px;
+      background-image: url("../img/icon/icon-flag.svg");
+      background-repeat: no-repeat;
+      background-position: center center;
+    }
   }
 
   .contacts__info {
@@ -155,6 +168,11 @@
     margin-bottom: 48px;
     font-size: 53px;
     line-height: 57px;
+
+    &::before {
+      top: -8px;
+      right: 365px;
+    }
   }
 
   .contacts__info {
