--- a/sass/field-mail.scss
+++ b/sass/field-mail.scss
@@ -2,8 +2,8 @@
   position: relative;
   margin: 0;
   padding: 0;
-  padding-top: 26px;
-  padding-bottom: 39px;
+  padding-top: 17px;
+  padding-bottom: 40px;
   border: none;
   border-top: 1px solid $green-light;
 }
@@ -14,41 +14,58 @@
   left: 0;
   padding-right: 25px;
   background-color: #ffffff;
+  cursor: pointer;
 
   @include field-title;
 }
 
 .field-mail__input {
   width: 100%;
-  padding-bottom: 15px;
+  padding-top: 15px;
+  padding-right: 40px;
+  padding-bottom: 14px;
+  font-size: 17px;
+  line-height: 18px;
+  letter-spacing: -0.02em;
   border: none;
   border-bottom: 2px solid #000000;
+  background-color: transparent;
+  background-image: url("../img/icon/icon-mail.svg");
+  background-repeat: no-repeat;
+  background-position: 224px 9px;
 
   &::placeholder {
-    font-size: 17px;
-    line-height: 18px;
     color: rgba(68, 68, 68, 0.3);
   }
 }
 
+.field-mail__input:hover,
+.field-mail__input:focus,
+.field-mail__input:active {
+  border-color: #62d1ba;
+  background-image: url("../img/icon/icon-mail-green.svg");
+}
+
 @media (min-width: $tablet-width) {
   .field-mail {
-    padding-top: 21px;
+    padding-top: 13px;
     padding-bottom: 50px;
     padding-left: 168px;
     border: none;
   }
 
   .field-mail__title {
-    top: 27px;
+    top: 30px;
     left: 3px;
     background-color: transparent;
   }
 
   .field-mail__input {
+    font-size: 19px;
+    line-height: 19px;
+    background-position: 447px 13px;
+
     &::placeholder {
-      font-size: 19px;
-      line-height: 19px;
       padding-left: 18px;
     }
   }
@@ -61,6 +78,11 @@
   }
 
   .field-mail__title {
-    left: 60px;
+    top: 33px;
+    left: 62px;
+  }
+
+  .field-mail__input {
+    background-position: 665px 12px;
   }
 }
