--- a/sass/field-phone.scss
+++ b/sass/field-phone.scss
@@ -2,7 +2,7 @@
   position: relative;
   margin: 0;
   padding: 0;
-  padding-top: 25px;
+  padding-top: 16px;
   padding-bottom: 40px;
   border: none;
   border-top: 1px solid $green-light;
@@ -14,27 +14,42 @@
   left: 0;
   padding-right: 29px;
   background-color: #ffffff;
+  cursor: pointer;
 
   @include field-title;
 }
 
 .field-phone__input {
   width: 100%;
+  padding-top: 15px;
+  padding-right: 40px;
   padding-bottom: 15px;
+  font-size: 17px;
+  line-height: 18px;
+  letter-spacing: -0.06em;
   border: none;
   border-bottom: 2px solid #000000;
+  background-color: transparent;
+  background-image: url("../img/icon/icon-phone.svg");
+  background-repeat: no-repeat;
+  background-position: 227px 9px;
 
   &::placeholder {
-    font-size: 17px;
-    line-height: 18px;
     color: rgba(68, 68, 68, 0.3);
   }
 }
 
+.field-phone__input:hover,
+.field-phone__input:focus,
+.field-phone__input:active {
+  border-color: #62d1ba;
+  background-image: url("../img/icon/icon-phone-green.svg");
+}
+
 @media (min-width: $tablet-width) {
   .field-phone {
-    padding-top: 60px;
-    padding-bottom: 15px;
+    padding-top: 48px;
+    padding-bottom: 10px;
     padding-left: 168px;
     border: none;
   }
@@ -46,11 +61,19 @@
   }
 
   .field-phone__input {
+    padding-right: 60px;
+    font-size: 19px;
+    line-height: 19px;
+    background-position: 450px 13px;
+
     &::placeholder {
-      font-size: 19px;
-      line-height: 19px;
       padding-left: 18px;
     }
+  }
+
+  .field-phone__icon {
+    top: 60px;
+    right: 25px;
   }
 }
 
@@ -63,5 +86,9 @@
   .field-phone__title {
     top: 66px;
     left: 62px;
+  }
+
+  .field-phone__input {
+    background-position: 668px 13px;
   }
 }
