--- a/sass/field-radio.scss
+++ b/sass/field-radio.scss
@@ -29,6 +29,7 @@
   font-size: 17px;
   line-height: 18px;
   color: rgba(0, 0, 0, 1);
+  cursor: pointer;
 }
 
 .field-radio__indicator {
@@ -40,6 +41,53 @@
   height: 40px;
   border: 2px solid #000000;
   border-radius: 50%;
+}
+
+.field-radio__input:checked+.field-radio__indicator {
+  &::before {
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    display: block;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background: #62d1ba;
+  }
+}
+
+.field-radio__wrapper:hover .field-radio__indicator,
+.field-radio__wrapper:hover .field-radio__indicator {
+  border-color: #62d1ba;
+}
+
+.field-radio__input:focus+.field-radio__indicator {
+  border-color: #62d1ba;
+  outline: thin dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+}
+
+.field-radio__input:active+.field-radio__indicator {
+  border-color: rgba(0, 0, 0, 0.1);
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    display: block;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background: #62d1ba;
+  }
+}
+
+.field-radio__input:checked:active+.field-radio__indicator {
+  &::before {
+    display: none;
+  }
 }
 
 @media (min-width: $tablet-width) {
@@ -74,6 +122,15 @@
   .field-radio__indicator {
     width: 52px;
     height: 52px;
+  }
+
+  .field-radio__input:checked+.field-radio__indicator {
+    &::before {
+      top: 13px;
+      left: 13px;
+      width: 22px;
+      height: 22px;
+    }
   }
 }
 
