--- a/sass/field-username.scss
+++ b/sass/field-username.scss
@@ -15,17 +15,17 @@
   display: flex;
   flex-direction: column;
   padding-top: 29px;
-  padding-bottom: 16px;
+  padding-bottom: 39px;
 }
 
 .field-username__label {
   display: block;
-  margin-bottom: 16px;
   font-family: "Open Sans", "Arial", sans-serif;
   font-weight: 700;
   font-size: 17px;
   line-height: 18px;
   color: rgba(0, 0, 0, 1);
+  cursor: pointer;
 }
 
 .field-username__item {
@@ -33,17 +33,30 @@
   flex-direction: column;
   margin: 0;
   margin-bottom: 23px;
+
+  &:last-of-type {
+    margin-bottom: 0;
+  }
 }
 
 .field-username__input {
+  padding-top: 16px;
   padding-bottom: 15px;
   border: none;
   border-bottom: 2px solid #000000;
+  background-color: transparent;
+  font-size: 17px;
+  line-height: 18px;
+  letter-spacing: 0.02em;
 
   &::placeholder {
-    font-size: 17px;
-    line-height: 18px;
     color: rgba(68, 68, 68, 0.3);
+  }
+
+  &:hover,
+  &:focus,
+  &:active {
+    border-color: #62d1ba;
   }
 }
 
@@ -63,29 +76,31 @@
   }
 
   .field-username__inner {
-    padding-top: 66px;
-    padding-bottom: 10px;
+    padding-top: 48px;
+    padding-bottom: 50px;
   }
 
   .field-username__item {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-bottom: 40px;
+    margin-bottom: 22px;
   }
 
   .field-username__input {
     flex-grow: 1;
+    padding-bottom: 14px;
+    font-size: 19px;
+    line-height: 19px;
 
     &::placeholder {
-      font-size: 19px;
-      line-height: 19px;
       padding-left: 17px;
       letter-spacing: 0.02em;
     }
   }
 
   .field-username__label {
+    margin-top: 17px;
     margin-right: 26px;
     margin-bottom: 17px;
     font-size: 19px;
