--- a/sass/global.scss
+++ b/sass/global.scss
@@ -49,3 +49,15 @@ input[type="radio"].visually-hidden {
   padding: 0 30px;
   margin: 0 auto;
 }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
+  display: none;
+  background-color: #ffffff;
+  opacity: 0.9;
+}
