--- a/sass/page-header.scss
+++ b/sass/page-header.scss
@@ -1,4 +1,6 @@
 .page-header {
+  position: relative;
+  min-height: 80px;
   border-top: 1px solid $gray-medium;
   border-bottom: 1px solid $gray-medium;
 }
@@ -11,18 +13,6 @@
   margin: 0 auto;
 }
 
-.page-header__logo {
-  align-self: center;
-  display: block;
-  padding: 22px;
-  padding-bottom: 12px;
-}
-
-.page-header__logo-image {
-  width: 86px;
-  height: 35px;
-}
-
 .page-header__delivery {
   display: none;
 }
@@ -30,7 +20,11 @@
 @media (min-width: $tablet-width) {
   .page-header {
     border: none;
-    background: linear-gradient(to bottom, #ffffff 0, #ffffff 89px, #ececec 89px, #ececec 90px, transparent 90px, transparent 100%);
+    background: linear-gradient(to bottom, #ffffff 0, #ffffff 89px, #e7e7e7 89px, #e7e7e7 89px, #fafafa 90px, #fafafa 100%);
+
+    &--inner {
+      background: linear-gradient(to bottom, #ffffff 0, #ffffff 89px, #dfdfdf 89px, #dfdfdf 89px, #f1f1f1 90px, #f1f1f1 100%);
+    }
   }
 
   .page-header__container {
