--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -3,5 +3,6 @@ $gray-dark: #444444;
 $gray-medium: #ececec;
 $green-light: #63d1bb;
 $green-dark: #56c3b2;
+$mobile-width-only: 767px;
 $tablet-width: 768px;
 $desktop-width: 1200px;
