Добавлена адаптивная графика

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -6,3 +6,5 @@ $green-dark: #56c3b2;
 $mobile-width-only: 767px;
 $tablet-width: 768px;
 $desktop-width: 1200px;
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
