--- a/sass/page-header.scss
+++ b/sass/page-header.scss
@@ -1,5 +1,6 @@
 .page-header {
   position: relative;
+  z-index: 1;
   min-height: 80px;
   border-top: 1px solid $gray-medium;
   border-bottom: 1px solid $gray-medium;
