--- a/sass/product-card.scss
+++ b/sass/product-card.scss
@@ -97,11 +97,6 @@
   height: 195px;
 }
 
-.product-card__img {
-  width: 260px;
-  height: 195px;
-}
-
 @media (min-width: $tablet-width) {
   .product-card {
     flex-flow: row wrap;
@@ -109,7 +104,7 @@
   }
 
   .product-card__link {
-    width: 333px;
+    width: 334px;
     height: 334px;
     background-color: $gray-medium;
   }
@@ -117,7 +112,8 @@
   .product-card__descr {
     justify-content: space-between;
     flex-grow: 1;
-    width: 335px;
+    width: 334px;
+    padding-left: 27px;
   }
 
   .product-card__title {
@@ -137,8 +133,8 @@
     padding-bottom: 25px;
   }
 
-  .product-cars__buy svg {
-    top: 1px;
+  .product-cars__btn svg {
+    top: 0;
     right: -2px;
   }
 
@@ -177,7 +173,6 @@
   }
 
   .product-card__btn svg {
-    top: 0;
     left: 2px;
   }
 
