--- a/sass/promo.scss
+++ b/sass/promo.scss
@@ -5,6 +5,11 @@
   background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center -18px;
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/hero-mobile@2x.jpg");
+    background-size: 575px auto;
+  }
 }
 
 .promo__container {
@@ -102,9 +107,28 @@
 
 @media (min-width: $tablet-width) {
   .promo {
+    position: relative;
     padding-top: 153px;
-    background-image: url("../img/hero-tablet.jpg");
+    background-image: url("../img/hero-tablet@1x.jpg");
     background-position: center 0;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      z-index: 1;
+      width: 100%;
+      height: 24px;
+      background-image: url("../img/bg-zigzag-fill.svg");
+      background-repeat: repeat-x;
+      background-size: 768px 28px;
+    }
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/hero-tablet@2x.jpg");
+      background-size: 1150px auto;
+    }
   }
 
   .promo__container {
@@ -130,15 +154,35 @@
   .promo__link {
     padding-top: 27px;
     padding-left: 36px;
+    padding-bottom: 43px;
     font-size: 20px;
     line-height: 30px;
+
+    &--interior::before {
+      top: 29px;
+    }
+
+    &--toys::before {
+      top: 29px;
+      right: 34px;
+    }
   }
 }
 
 @media (min-width: $desktop-width) {
   .promo {
-    padding-top: 152px;
-    background-image: url("../img/hero-desktop.jpg");
+    padding-top: 154px;
+    background-image: url("../img/hero-desktop@1x.jpg");
+
+    &::after {
+      height: 34px;
+      background-size: 1250px 37px;
+    }
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/hero-desktop@2x.jpg");
+      background-size: 1250px auto;
+    }
   }
 
   .promo__container {
@@ -147,9 +191,13 @@
 
   .promo__title {
     padding: 0 160px;
-    margin-bottom: 359px;
+    margin-bottom: 358px;
     font-size: 53px;
     line-height: 57px;
+  }
+
+  .promo-link {
+    padding-bottom: 49px;
   }
 
   .promo__link--interior {
