--- a/sass/reviews.scss
+++ b/sass/reviews.scss
@@ -1,6 +1,20 @@
 .reviews {
   padding-top: 24px;
-  padding-bottom: 51px;
+  padding-bottom: 45px;
+
+  &::after {
+    content: "";
+    display: block;
+    position: relative;
+    top: 44px;
+    left: 0;
+    width: 320px;
+    height: 7px;
+    margin: 0 auto;
+    background-image: url("../img/bg-zigzag-line.svg");
+    background-repeat: no-repeat;
+    background-size: 320px;
+  }
 }
 
 .reviews__container {
@@ -9,6 +23,7 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+
 }
 
 .reviews__wrapper {
@@ -64,7 +79,14 @@
 @media (min-width: $tablet-width) {
   .reviews {
     padding-top: 0;
-    padding-bottom: 87px;
+    padding-bottom: 70px;
+
+    &::after {
+      top: 70px;
+      width: 768px;
+      height: 17px;
+      background-size: 768px
+    }
   }
 
   .reviews__container {
@@ -80,6 +102,11 @@
     background-repeat: no-repeat;
     background-position: left top;
     background-size: 350px auto;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/review@2x.jpg");
+      background-size: 350px auto;
+    }
   }
 
   .reviews__title {
@@ -120,12 +147,19 @@
 
 @media (min-width: $desktop-width) {
   .reviews {
-    padding-bottom: 93px;
+    padding-bottom: 71px;
+
+    &::after {
+      top: 72px;
+      width: 1050px;
+      height: 23px;
+      background-size: 1050px;
+    }
   }
 
   .reviews__container {
     width: 1150px;
-    padding-top: 70px;
+    padding-top: 71px;
     padding-right: 50px;
     padding-left: 225px;
     background-position: 50px top;
