--- a/sass/product-week.scss
+++ b/sass/product-week.scss
@@ -50,7 +50,7 @@
       top: 75px;
       width: 1050px;
       height: 23px;
-      background-size: 1050px
+      background-size: 1050px;
     }
   }
 
