--- a/sass/reviews.scss
+++ b/sass/reviews.scss
@@ -23,7 +23,6 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-
 }
 
 .reviews__wrapper {
@@ -85,7 +84,7 @@
       top: 70px;
       width: 768px;
       height: 17px;
-      background-size: 768px
+      background-size: 768px;
     }
   }
 
