--- a/sass/promo.scss
+++ b/sass/promo.scss
@@ -123,6 +123,7 @@
       background-image: url("../img/bg-zigzag-fill.svg");
       background-repeat: repeat-x;
       background-size: 768px 28px;
+      transform: translateX(6px);
     }
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
@@ -177,6 +178,7 @@
     &::after {
       height: 34px;
       background-size: 1250px 37px;
+      transform: translateX(-32px);
     }
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
@@ -196,8 +198,8 @@
     line-height: 57px;
   }
 
-  .promo-link {
-    padding-bottom: 49px;
+  .promo__link {
+    padding-bottom: 48px;
   }
 
   .promo__link--interior {
