--- a/sass/reviews.scss
+++ b/sass/reviews.scss
@@ -85,6 +85,7 @@
       width: 768px;
       height: 17px;
       background-size: 768px;
+      transform: rotate(180deg);
     }
   }
 
@@ -149,7 +150,7 @@
     padding-bottom: 71px;
 
     &::after {
-      top: 72px;
+      top: 69px;
       width: 1050px;
       height: 23px;
       background-size: 1050px;
