--- a/sass/social.scss
+++ b/sass/social.scss
@@ -86,4 +86,17 @@
   .social {
     margin-top: 4px;
   }
+
+  .social__link--insta svg {
+    bottom: 9px;
+    right: 1px;
+  }
+
+  .social__link--fb svg {
+    bottom: 8px;
+  }
+
+  .social__link--tw svg {
+    bottom: 10px;
+  }
 }
