--- a/sass/map.scss
+++ b/sass/map.scss
@@ -1,8 +1,19 @@
 .map {
+  position: relative;
   width: 100%;
   height: 457px;
   margin-bottom: 39px;
   background-color: #ececec;
+  overflow: hidden;
+}
+
+.map__api {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
 }
 
 @media (min-width: $tablet-width) {
