Добавлен спрайт svg

--- a/sass/product-week.scss
+++ b/sass/product-week.scss
@@ -32,7 +32,7 @@
       top: 50px;
       width: 768px;
       height: 17px;
-      background-size: 768px;
+      background-size: 768px 17px;
     }
   }
 
