--- a/sass/reviews.scss
+++ b/sass/reviews.scss
@@ -84,7 +84,7 @@
       top: 70px;
       width: 768px;
       height: 17px;
-      background-size: 768px;
+      background-size: 768px 17px;
       transform: rotate(180deg);
     }
   }
