--- a/sass/social.scss
+++ b/sass/social.scss
@@ -25,19 +25,20 @@
   width: 40px;
   height: 40px;
 
-  &:hover path,
-  &:focus path {
+  &:hover svg,
+  &:focus svg {
     fill: #46c1ae;
   }
 
-  &:active path {
+  &:active svg {
     fill: #46c1ae;
     fill-opacity: 0.3;
   }
 }
 
-.social__link svg {
+.social__icon {
   position: absolute;
+  fill: #231F20;
 }
 
 .social__link--insta svg {
